@@ -24,6 +24,7 @@ package petname
 import (
 	"math/rand"
 	"strings"
+	"time"
 )
 
 // These lists are autogenerated from the master lists in the project:
@@ -70,4 +71,8 @@ func Generate(words int, separator string) string {
 	}
 	petname = append(petname, Adjective(), Name())
 	return strings.Join(petname, separator)
+}
+
+func init() {
+	rand.Seed(time.Now().UTC().UnixNano())
 }
